# CineAI

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/agents/: project.json  pyproject.toml
apps/agents/src/: main.py
apps/agents/src/routers/: generations.py  health.py
apps/api/: package.json  project.json  tsconfig.json
apps/api/src/: app.controller.ts  main.ts
apps/web/: middleware.ts  next.config.ts  package.json  project.json  tailwind.config.js  tsconfig.json
apps/web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/signup/: page.tsx
apps/web/src/app/app/: DashboardContext.tsx  DashboardLayoutClient.tsx  error.tsx  layout.tsx  loading.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/components/landing/: LandingPage.jsx
apps/web/src/components/ui/: GenerateModal.tsx  Icons.tsx  Toast.tsx  VideoCard.tsx  index.ts
apps/web/src/lib/: data.ts  fakeAuth.ts
apps/web/src/types/: index.ts
libs/api-client/: package.json  project.json  tsconfig.json
libs/api-client/src/: http-client.ts  index.ts  mock-client.ts  types.ts
libs/domain-types/: package.json  project.json
libs/mock-data/: package.json  project.json
libs/mock-data/src/: index.ts
libs/ui/: package.json  tsconfig.json
libs/ui/src/: AuthForm.tsx  CommandPalette.tsx  NotificationPanel.tsx  Thumb.tsx  index.ts  motion.tsx
(+6 files in other folders)
